--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "consumer": "nest start --path ",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/bet/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -54,6 +54,8 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.8.2",
     "graphql-type-json": "^0.3.2",
+    "ioredis": "^5.4.1",
+    "joi": "^17.13.3",
     "moment": "^2.30.1",
     "nest-commander": "^3.13.0",
     "passport-jwt": "^4.0.1",
