--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,7 @@
 NODE_ENV=testing
 APP_PORT=6000
 
-DB_HOST=localhost
-DB_ROOT_PASSWORD=hero
-DB_DATABASE=bet_herox
-DB_USERNAME=root
-DB_PASSWORD=hero
-DB_PORT=3306
-DB_SYNCHRONIZE=true
+DATABASE_URL=postgresql://hero:hero@localhost:5432/postgres
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
