--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "consumer": "nest start --path ",
+    "socket": "nest start --watch socket",
+    "auth": "nest start --watch auth",
+    "cron": "nest start --watch cron",
+    "consumer": "nest start --watch comsumer",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/bet/main",
@@ -23,6 +26,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "prepare": "husky",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/bet/test/jest-e2e.json"
   },
@@ -42,7 +46,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.9",
     "@nestjs/schedule": "^4.0.2",
-    "@nestjs/swagger": "^7.3.1",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.15.0",
     "@types/passport-jwt": "^4.0.1",
@@ -68,6 +72,9 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.9.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -78,13 +85,17 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-unused-imports": "^4.1.3",
+    "globals": "^15.9.0",
+    "husky": "^9.1.5",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
     "prisma-nestjs-graphql": "^20.0.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
@@ -92,7 +103,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "typescript-eslint": "^8.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -118,5 +130,16 @@
       "^@app/shared(|/.*)$": "<rootDir>/libs/shared/src/$1",
       "^@app/prisma(|/.*)$": "<rootDir>/libs/prisma/src/$1"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{html,css,less,ejs}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
